@@ -1,4 +1,4 @@
-"person-id","household-id"
+"person_id","household_id"
 10,1
 11,4
 12,2
