@@ -1,3 +1,3 @@
-"household-id","members"
+"household_id","members"
 1,3
 2,2
