@@ -1,4 +1,4 @@
-"person-id","household-id"
+"person_id","household_id"
 1,1
 1,2
 1,3
