@@ -1,10 +1,12 @@
 version 0.1.4
-- 'confront' now emits a warining when variable name conflicts can occur.
+- 'confront' now emits a warining when variable name conflicts with name of a reference data set
 - Deprecated 'validate_reset', in favour of the shorter 'reset' (use 'validate::reset' in case of ambiguity)
 - Deprecated 'validate_options' in favour of the shorter 'voptions'
 - New option na.value with default value NA, controlling the output when a rule evaluates to NA.
+- Added rules from the ESSnet on validation (deliverable 17) to automated tests.
 - Bugfix: macro expansion failed when macros were reused in other macros.
 - Bugfix: certain nonlinear relations were recognized as linear
+- Bugfix: rules that use (anonymous) function definitions raised error when printed.
 
 version 0.1.3
 - initial release
